# extractors

./: .gitignore  _config.py  main.py  pyproject.toml  requirements.txt  result.html  settings.yaml  utils.py
ajs/: medeiros.py
courts/: tjac.py  tjal.py  tjam.py  tjap.py  tjma.py  tjmg.py  tjms.py  tjsp.py
